[package]
name = "action-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

bitris = {path = "../bitris"}
serde_json = "1.0.110"
async-std = "1.12.0"
